dev: Fix smartphone login form align

--- a/www/style.css
+++ b/www/style.css
@@ -78,6 +78,10 @@ h4 {
 
 /* CELULAR */
 @media (max-width:480px) {
+  .form-login {
+    width: 15rem;
+    margin: auto;
+  } 
   .footer {
     font-size: 10px;
     position: absolute;
